# Ezy-OS

./: CMakeLists.txt  INIT.h  bild.bat  build.bat  clearwin.h  main.c  workfiles.c
additions/: calculator.c  infos.c  notich.c  timenow.c
additions/notich/: notich.c
additions/wearth/: getWearth.c  server.go
file/: workfiles.c
interface/: interface.c
libraru/: brbr.h  initlibery.h
